# prisma

server/prisma-rs/libs/database-inspector/: Cargo.toml
server/prisma-rs/libs/database-inspector/src/: main.rs
server/prisma-rs/libs/prisma-common/: Cargo.toml
server/prisma-rs/libs/prisma-common/src/: error.rs
server/prisma-rs/libs/r2d2-sqlite3/src/: lib.rs
server/prisma-rs/prisma-models/: Cargo.toml
server/prisma-rs/prisma-models/src/: lib.rs  prisma_value.rs  selected_fields.rs
server/prisma-rs/query-engine/: Cargo.toml
server/prisma-rs/query-engine/src/: data_resolvers.rs  lib.rs  protobuf.rs
server/prisma-rs/query-engine/src/data_resolvers/: sqlite.rs
server/prisma-rs/query-engine/src/data_resolvers/sqlite/: data_resolver.rs
server/prisma-rs/query-engine/src/protobuf/: interface.rs  prelude.rs
server/prisma-rs/query-engine/src/protobuf/input/: get_nodes.rs  get_related_nodes.rs
server/protobuf/: protocol.proto
