[package]
name = "prisma-models"
version = "0.0.0"
authors = ["Dominic Petrick <petrick@prisma.io>", "Julius de Bruijn <bruijn@prisma.io>", "Marcus Böhm <boehm@prisma.io>" ]
edition = "2018"

[dependencies]
once_cell = "0.1"
serde_derive = "1.0"
serde_json = "1.0"
serde = "1.0"
debug_stub_derive = "0.3"
prisma-query = { git = "https://github.com/prisma/prisma-query", branch = "sqlite_backend" }
prisma-common = { path = "../libs/prisma-common" }
sqlite = "0.24"
chrono = "0.4.6"
