[package]
name = "database-inspector"
version = "0.1.0"
authors = ["Marcus Böhm <boehm@prisma.io>"]
edition = "2018"

[dependencies]
prisma-query = { git = "https://github.com/prisma/prisma-query", branch = "sqlite_backend" }
barrel = { git = "https://github.com/spacekookie/barrel", features = ["sqlite3"] }
sqlite = "0.24"
prisma-models = { path = "../../prisma-models" }
time = "*"
